# PasswordManager_CA

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  compile.bat  compile.sh  run.bat  run.sh
include/: HexE.h  IEncryption.h  custom_io.h  custom_terminal.h  driver.h  logger.h  password_manager.h
src/: HexE.cpp  custom_io.cpp  custom_terminal.cpp  driver.cpp  logger.cpp  main.cpp  password_manager.cpp
